@startuml

title __TEMA1-MAVEN's Class Diagram__\n

  namespace Application {
    class Application.Application {
    }
  }
  

  namespace Controller {
    class Controller.AdministratorController {
    }
  }
  

  namespace Controller {
    class Controller.AuthenticationController {
    }
  }
  

  namespace Controller {
    class Controller.CoordinatorViewController {
    }
  }
  

  namespace Controller {
    class Controller.GraphController {
    }
  }
  

  namespace Controller {
    class Controller.JGraphXAdapter {
    }
  }
  

  namespace Controller {
    class Controller.MainController {
    }
  }
  

  namespace Controller {
    class Controller.ParcelController {
    }
  }
  

  namespace Controller {
    class Controller.PostmanViewController {
    }
  }
  

  namespace Controller {
    class Controller.Serializer {
    }
  }
  

  namespace Controller {
    class Controller.ViewsController {
    }
  }
  

  namespace Model {
    class Model.Administrator {
    }
  }
  

  namespace Model {
    class Model.Coordinator {
    }
  }
  

  namespace Model {
    class Model.Parcel {
    }
  }
  

  namespace Model {
    class Model.Postman {
    }
  }
  

  namespace Model {
    class Model.User {
    }
  }
  

  namespace Model {
    class Model.UserFactory {
    }
  }
  

  namespace View {
    class View.AdministratorView {
    }
  }
  

  namespace View {
    class View.CoordinatorView {
    }
  }
  

  namespace View {
    class View.LoginView {
    }
  }
  

  namespace View {
    class View.PostmanView {
    }
  }
  

  namespace org.jgrapht.ext {
    class org.jgrapht.ext.JGraphXAdapter {
    }
  }
  

  Controller.AdministratorController o-- View.AdministratorView : administratorView
  Controller.AdministratorController o-- Controller.AuthenticationController : authenticationController
  Controller.AdministratorController o-- Model.User.Type : currentShowingType
  Controller.AdministratorController o-- Controller.MainController : mainController
  Controller.AuthenticationController o-- Model.User : currentUser
  Controller.AuthenticationController o-- View.LoginView : loginView
  Controller.AuthenticationController o-- Controller.MainController : mainController
  Controller.CoordinatorViewController o-- Model.User : currentUser
  Controller.CoordinatorViewController o-- Controller.MainController : mainController
  Controller.CoordinatorViewController o-- Controller.ParcelController : parcelController
  Controller.CoordinatorViewController o-- Controller.AuthenticationController : authenticationController
  Controller.CoordinatorViewController o-- View.CoordinatorView : coordinatorView
  Controller.GraphController o-- View.PostmanView : postmanView
  Controller.JGraphXAdapter .up.|> org.jgrapht.event.GraphListener
  Controller.JGraphXAdapter -up-|> com.mxgraph.view.mxGraph
  Controller.MainController o-- Controller.AdministratorController : administratorController
  Controller.MainController o-- Controller.AuthenticationController : authenticationController
  Controller.MainController o-- Controller.ParcelController : parcelController
  Controller.ParcelController o-- Controller.GraphController : graphController
  Controller.ParcelController o-- Controller.MainController : mainController
  Controller.PostmanViewController o-- Model.User : currentUser
  Controller.PostmanViewController o-- Controller.MainController : mainController
  Controller.PostmanViewController o-- Controller.ParcelController : parcelController
  Controller.PostmanViewController o-- View.PostmanView : postmanView
  Model.Administrator .up.|> java.io.Serializable
  Model.Administrator -up-|> Model.User
  Model.Coordinator .up.|> java.io.Serializable
  Model.Coordinator -up-|> Model.User
  Model.Parcel .up.|> java.io.Serializable
  Model.Postman .up.|> java.io.Serializable
  Model.Postman -up-|> Model.User
  Model.User .up.|> java.io.Serializable
  Model.User o-- Model.User.Type : type
  View.AdministratorView -up-|> javax.swing.JFrame
  View.CoordinatorView -up-|> javax.swing.JFrame
  View.LoginView -up-|> javax.swing.JFrame
  View.PostmanView -up-|> javax.swing.JFrame
  org.jgrapht.ext.JGraphXAdapter .up.|> org.jgrapht.event.GraphListener
  org.jgrapht.ext.JGraphXAdapter -up-|> com.mxgraph.view.mxGraph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
